==> vmire/Arduino_lib_RFM69/RFM69.cpp <==
#include <RFM69.h>
#include <RFM69registers.h>
#include <SPI.h>
#include <EEPROM.h>

bool RFM69::initialize(byte nodeId, byte networkId, char* encryptKey){
	if(_debug){
		Serial.print(F("RFM69 init : nodeId=")); Serial.print(nodeId); Serial.print(F(" networdId=")); Serial.println(networkId);
	}
	
	const byte CONFIG[][2] =
	{
		/* 0x01 */ { REG_OPMODE, RF_OPMODE_SEQUENCER_ON | RF_OPMODE_LISTEN_OFF | RF_OPMODE_STANDBY },
		/* 0x02 */ { REG_DATAMODUL, RF_DATAMODUL_DATAMODE_PACKET | RF_DATAMODUL_MODULATIONTYPE_FSK | RF_DATAMODUL_MODULATIONSHAPING_00 }, //no shaping
		/* 0x03 */ { REG_BITRATEMSB, RF_BITRATEMSB_55555}, //default:4.8 KBPS
		/* 0x04 */ { REG_BITRATELSB, RF_BITRATELSB_55555},
		/* 0x05 */ { REG_FDEVMSB, RF_FDEVMSB_50000}, //default:5khz, (FDEV + BitRate/2 <= 500Khz)
		/* 0x06 */ { REG_FDEVLSB, RF_FDEVLSB_50000},

		/* 0x07 */ { REG_FRFMSB, (_frequencyBand==RF69_315MHZ ? RF_FRFMSB_315 : (_frequencyBand==RF69_433MHZ ? RF_FRFMSB_433 : (_frequencyBand==RF69_868MHZ ? RF_FRFMSB_868 : RF_FRFMSB_915))) },
		/* 0x08 */ { REG_FRFMID, (_frequencyBand==RF69_315MHZ ? RF_FRFMID_315 : (_frequencyBand==RF69_433MHZ ? RF_FRFMID_433 : (_frequencyBand==RF69_868MHZ ? RF_FRFMID_868 : RF_FRFMID_915))) },
		/* 0x09 */ { REG_FRFLSB, (_frequencyBand==RF69_315MHZ ? RF_FRFLSB_315 : (_frequencyBand==RF69_433MHZ ? RF_FRFLSB_433 : (_frequencyBand==RF69_868MHZ ? RF_FRFLSB_868 : RF_FRFLSB_915))) },
		
		// looks like PA1 and PA2 are not implemented on RFM69W, hence the max output power is 13dBm
		// +17dBm and +20dBm are possible on RFM69HW
		// +13dBm formula: Pout=-18+OutputPower (with PA0 or PA1**)
		// +17dBm formula: Pout=-14+OutputPower (with PA1 and PA2)**
		// +20dBm formula: Pout=-11+OutputPower (with PA1 and PA2)** and high power PA settings (section 3.3.7 in datasheet)
		///* 0x11 */ { REG_PALEVEL, RF_PALEVEL_PA0_ON | RF_PALEVEL_PA1_OFF | RF_PALEVEL_PA2_OFF | RF_PALEVEL_OUTPUTPOWER_11111},
		///* 0x13 */ { REG_OCP, RF_OCP_ON | RF_OCP_TRIM_95 }, //over current protection (default is 95mA)
		
		// RXBW defaults are { REG_RXBW, RF_RXBW_DCCFREQ_010 | RF_RXBW_MANT_24 | RF_RXBW_EXP_5} (RxBw: 10.4khz)
		/* 0x19 */ { REG_RXBW, RF_RXBW_DCCFREQ_010 | RF_RXBW_MANT_16 | RF_RXBW_EXP_2 }, //(BitRate < 2 * RxBw)
		//for BR-19200: //* 0x19 */ { REG_RXBW, RF_RXBW_DCCFREQ_010 | RF_RXBW_MANT_24 | RF_RXBW_EXP_3 },
		/* 0x25 */ { REG_DIOMAPPING1, RF_DIOMAPPING1_DIO0_01 }, //DIO0 is the only IRQ we're using
		/* 0x29 */ { REG_RSSITHRESH, 220 }, //must be set to dBm = (-Sensitivity / 2) - default is 0xE4=228 so -114dBm
		///* 0x2d */ { REG_PREAMBLELSB, RF_PREAMBLESIZE_LSB_VALUE } // default 3 preamble bytes 0xAAAAAA
		/* 0x2e */ { REG_SYNCCONFIG, RF_SYNC_ON | RF_SYNC_FIFOFILL_AUTO | RF_SYNC_SIZE_2 | RF_SYNC_TOL_0 },
		/* 0x2f */ { REG_SYNCVALUE1, 0x2D },			//attempt to make this compatible with sync1 byte of RFM12B lib
		/* 0x30 */ { REG_SYNCVALUE2, networkId }, //NETWORK ID
		/* 0x37 */ { REG_PACKETCONFIG1, RF_PACKET1_FORMAT_VARIABLE | RF_PACKET1_DCFREE_OFF | RF_PACKET1_CRC_ON | RF_PACKET1_CRCAUTOCLEAR_ON | RF_PACKET1_ADRSFILTERING_OFF },
		/* 0x38 */ { REG_PAYLOADLENGTH, 66 }, //in variable length mode: the max frame size, not used in TX
		//* 0x39 */ { REG_NODEADRS, nodeId }, //turned off because we're not using address filtering
		/* 0x3C */ { REG_FIFOTHRESH, RF_FIFOTHRESH_TXSTART_FIFONOTEMPTY | RF_FIFOTHRESH_VALUE }, //TX on FIFO not empty
		/* 0x3d */ { REG_PACKETCONFIG2, RF_PACKET2_RXRESTARTDELAY_2BITS | RF_PACKET2_AUTORXRESTART_ON | RF_PACKET2_AES_OFF }, //RXRESTARTDELAY must match transmitter PA ramp-down time (bitrate dependent)
		//for BR-19200: //* 0x3d */ { REG_PACKETCONFIG2, RF_PACKET2_RXRESTARTDELAY_NONE | RF_PACKET2_AUTORXRESTART_ON | RF_PACKET2_AES_OFF }, //RXRESTARTDELAY must match transmitter PA ramp-down time (bitrate dependent)
		//* 0x6F */ { REG_TESTDAGC, RF_DAGC_CONTINUOUS }, // run DAGC continuously in RX mode
		/* 0x6F */ { REG_TESTDAGC, RF_DAGC_IMPROVED_LOWBETA0 }, // run DAGC continuously in RX mode, recommended default for AfcLowBetaOn=0
		{255, 0}
	};

	pinMode(_slaveSelectPin, OUTPUT);
	SPI.begin();
	
	do writeReg(REG_SYNCVALUE1, 0xaa); while (readReg(REG_SYNCVALUE1) != 0xaa);
	do writeReg(REG_SYNCVALUE1, 0x55); while (readReg(REG_SYNCVALUE1) != 0x55);

	for (byte i = 0; CONFIG[i][0] != 255; i++)
		writeReg(CONFIG[i][0], CONFIG[i][1]);

	// Encryption is persistent between resets and can trip you up during debugging.
	setEncrypt(encryptKey);

	setHighPower(_isRFM69HW); //called regardless if it's a RFM69W or RFM69HW
	setMode(RF69_MODE_STANDBY);
	while ((readReg(REG_IRQFLAGS1) & RF_IRQFLAGS1_MODEREADY) == 0x00); // Wait for ModeReady
	attachInterrupt(_interruptNum, RFM69::isr0, RISING);

	selfPointer = this;
	_address = nodeId;
	
	if(_debug){
		Serial.print(F("Transmitting at "));
		Serial.print(_frequencyBand==RF69_315MHZ ? "315" : (_frequencyBand==RF69_433MHZ ? "433" : (_frequencyBand==RF69_868MHZ ? "868" : "915")));
		Serial.println("MHz");
	}
	
	return true;
}

void RFM69::sendFrame(byte toAddress, const void* buffer, byte bufferSize, bool requestACK, bool sendACK){
	if(_debug){
		Serial.print("sendFrame: "); Serial.write((char*)buffer,bufferSize);
		if(requestACK) Serial.print(", request ack");
		if(sendACK) Serial.print(", send ack");
		Serial.println();
	}
	setMode(RF69_MODE_STANDBY); //turn off receiver to prevent reception while filling fifo
	while ((readReg(REG_IRQFLAGS1) & RF_IRQFLAGS1_MODEREADY) == 0x00); // Wait for ModeReady
	writeReg(REG_DIOMAPPING1, RF_DIOMAPPING1_DIO0_00); // DIO0 is "Packet Sent"
	if (bufferSize > RF69_MAX_DATA_LEN) bufferSize = RF69_MAX_DATA_LEN;

	byte ackByte = 0x00;
	if (sendACK) ackByte = 0x80;
	else if (requestACK) ackByte = 0x40;
	
	//write to FIFO
	select();
	SPI.transfer(REG_FIFO | 0x80);
	SPI.transfer(bufferSize + 3);		//Payload length = toAddress byte + ack byte + buffer length
	SPI.transfer(toAddress);			//Destinataire address
	SPI.transfer(_address);				//Source address
	SPI.transfer(ackByte);				//Ack byte
	
	
	for (byte i = 0; i < bufferSize; i++){
		SPI.transfer(((uint8_t*)buffer)[i]);
	}
	unselect();

	/* no need to wait for transmit mode to be ready since its handled by the radio */
	setMode(RF69_MODE_TX);
	uint32_t txStart = millis();
	while (digitalRead(_interruptPin) == 0 && millis() - txStart < RF69_TX_LIMIT_MS); //wait for DIO0 to turn HIGH signalling transmission finish
	//Si le RFM n'est pas présent, on sort sur timeout
	//while (readReg(REG_IRQFLAGS2) & RF_IRQFLAGS2_PACKETSENT == 0x00); // Wait for ModeReady
	setMode(RF69_MODE_STANDBY);
}

void RFM69::select() {
	noInterrupts();
	//save current SPI settings
	_SPCR = SPCR;
	_SPSR = SPSR;
	//set RFM69 SPI settings
	SPI.setDataMode(SPI_MODE0);
	SPI.setBitOrder(MSBFIRST);
	SPI.setClockDivider(SPI_CLOCK_DIV4); //decided to slow down from DIV2 after SPI stalling in some instances, especially visible on mega1284p when RFM69 and FLASH chip both present
	digitalWrite(_slaveSelectPin, LOW);
}

void RFM69::unselect() {
	digitalWrite(_slaveSelectPin, HIGH);
	//restore SPI settings to what they were before talking to RFM69
	SPCR = _SPCR;
	SPSR = _SPSR;
	interrupts();
}
